--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -49,5 +49,5 @@ jobs:
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@master
         with:
-          message: "successfully build image:  docker.pkg.github.com/${{ github.event.repository.full_name }}/my-app/${SHORT_SHA}"
+          message: "successfully build image:  docker.pkg.github.com/${{ github.event.repository.full_name }}/my-app/${{ SHORT_SHA }}"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
