--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -37,17 +37,18 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Add SHORT_SHA env property with commit short sha
-        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+        run:  |
+          echo "::set-env name=SHORT_SHA::`echo ${GITHUB_SHA} | cut -c1-8`"
 
       - name: Build and Publish head Docker image
         uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           image-name: my-app
-          image-tag: ${SHORT_SHA}
+          image-tag: ${{ env.SHORT_SHA }}
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@master
         with:
-          message: "successfully build image:  docker.pkg.github.com/${{ github.event.repository.full_name }}/my-app/${{ SHORT_SHA }}"
+          message: "successfully build image:  docker.pkg.github.com/${{ github.event.repository.full_name }}/my-app/${{ env.SHORT_SHA }}"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
