--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -37,8 +37,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Add SHORT_SHA env property with commit short sha
-        run:  |
-          echo "::set-env name=SHORT_SHA::`echo ${GITHUB_SHA} | cut -c1-8`"
+        run:  echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
       - name: Build and Publish head Docker image
         uses: VaultVulp/gp-docker-action@1.1.7
